# primus

./: .gitignore  Cargo.toml
barrett/: Cargo.toml
barrett/src/: barrett_reduction.md  lib.rs  ops.rs  simd.rs
barrett/tests/: derive.rs
gcd/: Cargo.toml
integer/: Cargo.toml
integer/benches/: ops.rs
integer/src/: big_integer.rs  integer.rs  lib.rs  simd.rs  unsigned_integer.rs
integer/src/integer_traits/: bits.rs  cast.rs  mod.rs  two.rs  wrapping.rs
integer/src/integer_traits/widening/carrying_add/: mod.rs  primitive.rs  simd.rs
integer/src/integer_traits/widening/carrying_mul/: mod.rs  primitive.rs  simd.rs
integer/src/integer_traits/widening/widening_mul/: mod.rs  simd.rs
primus_barrett_modulus/: Cargo.toml  README.md
primus_barrett_modulus/src/: lib.rs  ops.rs  simd.rs
primus_barrett_modulus/tests/: derive.rs
primus_decompose/: Cargo.toml
primus_decompose/src/: lib.rs
primus_decompose/src/big_integer/: basis.rs  common.rs  mod.rs
primus_decompose/src/primitive/: basis.rs  common.rs  mod.rs
primus_decompose/src/zama/: basis.rs  common.rs  mod.rs
primus_decompose/tests/: big_uint.rs  non_pow_of_2.rs  pow_of_2.rs  zama.rs
primus_distr/: Cargo.toml
primus_distr/benches/: gen_sampler.rs  sample_gaussian.rs
primus_distr/examples/: check_gaussian.rs  compare_samplers.rs  ziggurat_edge_cases.rs
primus_distr/src/: binary.rs  common.rs  error.rs  lib.rs  ternary.rs
primus_distr/src/discrete_gaussian/: cdt.rs  cdt_logspace.rs  cdt_logspace_dd.rs  mod.rs  unix_cdt.rs  ziggurat.rs
primus_distr/src/signed_discrete_gaussian/: cdt.rs  mod.rs  unix_cdt.rs  ziggurat.rs
primus_factor/: Cargo.toml
primus_factor/benches/: shoup_factor.rs
primus_factor/src/: lib.rs  multiply.rs
primus_factor/src/shoup_factor/: mod.rs  simd.rs
primus_fhe_core/: Cargo.toml
primus_fhe_core/benches/: automorphism.rs  expand_coeff.rs  expand_coeff_components.rs  lwe_enc.rs  plaintext_codec.rs  trace.rs
primus_fhe_core/src/: automorphism.rs  ciphertext.rs  error.rs  key_switch.rs  lib.rs  plaintext.rs  secret_key.rs  trace.rs
primus_fhe_core/src/automorphism/: coeff.rs  mod.rs  ntt.rs
primus_fhe_core/src/automorphism/glwe/: crt.rs  dcrt.rs  mod.rs
primus_fhe_core/src/expand_coeff/glwe/: crt.rs  dcrt.rs  mod.rs
primus_fhe_core/src/parameter/: glwe.rs  lwe.rs  mod.rs  rlwe.rs
primus_fhe_core/src/plaintext/: codec.rs  helpers.rs  mod.rs
primus_fhe_core/src/plaintext/rns/: coeff_codec.rs  mod.rs
primus_fhe_core/src/plaintext/single_modulus/: helpers.rs  mod.rs
primus_fhe_core/src/public_key/: glwe.rs  mod.rs  rlwe.rs
primus_fhe_core/src/secret_key/: glwe.rs  lwe.rs  mod.rs  ntru.rs  rlwe.rs
primus_fhe_core/src/trace/glwe/: crt.rs  dcrt.rs  mod.rs  rev.rs
primus_fhe_core/tests/: auto.rs  expand.rs  ext_prod.rs  glev.rs  glwe.rs  ksk.rs  lwe.rs  plain.rs  rlwe.rs  trace.rs
primus_integer/: ALGORITHMS.md  Cargo.toml
primus_integer/benches/: ops.rs
primus_integer/src/: big_integer.rs  data.rs  integer.rs  lib.rs  macros.rs  simd.rs  size.rs  unsigned_integer.rs
primus_integer/src/big_integer/: digits.rs
primus_integer/src/integer_traits/: bits.rs  bounded.rs  bytes.rs  cast.rs  checked.rs  division.rs  mod.rs  overflowing.rs  wrapping.rs
primus_integer/src/integer_traits/widening/: mod.rs
primus_integer/src/integer_traits/widening/borrowing_sub/: mod.rs  primitive.rs  simd.rs
primus_integer/src/integer_traits/widening/carrying_add/: primitive.rs  simd.rs
primus_integer/src/integer_traits/widening/carrying_mul/: mod.rs  primitive.rs  simd.rs
primus_lattice/: Cargo.toml
primus_lattice/src/: lib.rs
primus_lattice/src/context/: glev.rs  mod.rs
primus_lattice/src/ggsw/: coeff.rs  crt.rs  dcrt.rs  mod.rs  ntt.rs
primus_lattice/src/glev/: coeff.rs  crt.rs  dcrt.rs  mod.rs  ntt.rs
primus_lattice/src/glwe/: big_uint.rs  coeff.rs  crt.rs  dcrt.rs  mod.rs  ntt.rs
primus_lattice/src/lwe/: mod.rs  multiple_message.rs  single_message.rs
primus_lattice/src/macros/: mod.rs
primus_lattice/src/ntru/: coeff.rs  mod.rs  ntt.rs
primus_lattice/src/rgsw/: coeff.rs  crt.rs  dcrt.rs  mod.rs  ntt.rs
primus_lattice/src/rlev/: coeff.rs  crt.rs  dcrt.rs  mod.rs  ntt.rs
primus_lattice/src/rlwe/: coeff.rs  crt.rs  dcrt.rs  mod.rs  normal.rs  ntt.rs  truncate.rs
primus_modulus/: Cargo.toml
primus_modulus/benches/: barrett50_slice.rs  barrett_lane_width.rs  barrett_slice.rs  modulus.rs
primus_modulus/src/: lib.rs
primus_modulus/src/barrett/: mod.rs  ops.rs  simd.rs  slice.rs
primus_modulus/src/barrett50/: mod.rs  ops.rs  simd_ifma.rs  slice.rs
primus_modulus/src/montgomery/: mod.rs  ops.rs  slice.rs
primus_modulus/src/native/: mod.rs  ops.rs  slice.rs
primus_modulus/src/power_of_two/: mod.rs  ops.rs  slice.rs
primus_modulus/src/unsigned_integer/: mod.rs  ops.rs
primus_modulus/tests/: derives.rs
primus_ntt/: Cargo.toml
primus_ntt/benches/: ntt.rs
primus_ntt/src/: error.rs  lib.rs  reverse.rs  root.rs
primus_ntt/src/crt_ntt/: concrete.rs  mod.rs  primitive.rs
primus_ntt/src/dcrt/: concrete.rs  mod.rs  primitive.rs
primus_ntt/src/ntt/: concrete.rs  hexl.rs  mod.rs  primitive.rs
primus_ntt/src/ntt/hexl/: fwd.rs  internal.rs  inv.rs  mod.rs  number_theory.rs  radix2.rs  utils.rs
primus_ntt/src/table/: mod.rs  primitive.rs
primus_ntt/tests/: hexl.rs  root.rs
primus_poly/: Cargo.toml
primus_poly/src/: lib.rs  macros.rs
primus_poly/src/array/: add.rs  basic.rs  mod.rs  mul.rs  neg.rs  random.rs  sub.rs
primus_poly/src/big_uint_poly/: add.rs  mod.rs  neg.rs  sub.rs
primus_poly/src/coeff/: mod.rs
primus_poly/src/crt/: add.rs  basic.rs  mod.rs  mul.rs  neg.rs  random.rs  sub.rs
primus_poly/src/dcrt/: add.rs  basic.rs  inv.rs  mod.rs  mul.rs  neg.rs  random.rs  sub.rs
primus_poly/src/ntt/: add.rs  basic.rs  inv.rs  mod.rs  mul.rs  neg.rs  random.rs  sub.rs
primus_poly/src/poly/: add.rs  basic.rs  mod.rs  mul.rs  neg.rs  random.rs  sub.rs
primus_rns/: Cargo.toml
primus_rns/src/: base.rs  converter.rs  error.rs  lib.rs  slice.rs
primus_rns/src/base/: mod.rs
primus_rns/tests/: rns.rs
(+69 files in other folders)
