[workspace]
members = [
    "primus_gcd",
    "primus_integer",
    "primus_reduce",
    "primus_modulo",
    "primus_uint_modulus",
    "primus_powof2_modulus",
    "primus_native_modulus",
    "primus_barrett_modulus",
    "primus_barrett_derive",
    "primus_factor",
    "primus_decompose",
    "primus_poly",
    "primus_ntt",
    "primus_rns",
    "primus_lattice",
    "primus_utils",
]
resolver = "3"

[workspace.dependencies]
thiserror = "2"
num-traits = "0.2"
rand = "0.9"
rayon = "1.11"
bytemuck = "1.23"
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.8"
itertools = "0.14.0"

criterion = "0.7"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1
