[workspace]
members = [
    "primus_gcd",
    "primus_integer",
    "primus_reduce",
    "primus_modulo",
    "primus_barrett_derive",
    "primus_modulus",
    "primus_factor",
    "primus_decompose",
    "primus_poly",
    "primus_ntt",
    "primus_rns",
    "primus_lattice",
    "primus_distr",
    "primus_fhe_core",
]
resolver = "3"

[workspace.dependencies]
thiserror = "2"
num-traits = "0.2"
rand = "0.9"
# rand_distr = "0.5"
rayon = "1.11"
bytemuck = "1.23"
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.8"
itertools = "0.14.0"
paste = "1.0"
bigdecimal = "0.4"

pretty_assertions = "1.4"
indicatif = { version = "0.18", features = ["rayon"] }
criterion = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1
