[package]
name = "barrett"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_integer = { path = "../primus_integer" }
reduce = { path = "../reduce" }
uint_modulus = { path = "../uint_modulus" }
num-traits = { workspace = true }
barrett_derive = { path = "../barrett_derive", optional = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["nightly", "simd", "derive"]
nightly = ["primus_integer/nightly"]
simd = ["primus_integer/simd"]
derive = ["dep:barrett_derive"]
