[package]
name = "barrett"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_integer = { path = "../primus_integer" }
primus_reduce = { path = "../primus_reduce" }
primus_uint_modulus = { path = "../primus_uint_modulus" }
barrett_derive = { path = "../barrett_derive", optional = true }

num-traits = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["nightly", "simd", "derive"]
nightly = ["primus_integer/nightly"]
simd = ["primus_integer/simd"]
derive = ["dep:barrett_derive"]
