[package]
name = "integer"
version = "0.1.0"
edition = "2024"

[dependencies]
gcd = { path = "../gcd" }

num-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
nightly = []
simd = ["rand/simd_support"]

[[bench]]
name = "ops"
harness = false
