[package]
name = "primus_decompose"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_utils = { path = "../primus_utils" }
primus_integer = { path = "../primus_integer" }
primus_reduce = { path = "../primus_reduce" }

num-traits = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
primus_modulus = { path = "../primus_modulus" }
primus_rns = { path = "../primus_rns" }

rand = { workspace = true }
itertools = { workspace = true }
