[package]
name = "primus_distr"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_integer = { path = "../primus_integer" }

thiserror = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
# rand_distr = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
bigdecimal = "0.4.8"

[target.'cfg(target_os = "linux")'.dependencies]
rug = "=1.28"
