[package]
name = "primus_factor"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_integer = { path = "../primus_integer" }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }

[features]
default = []
nightly = ["primus_integer/nightly"]
simd = ["primus_integer/simd"]

[[bench]]
name = "shoup_factor"
harness = false
