[package]
name = "primus_integer"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_gcd = { path = "../primus_gcd" }
primus_utils = { path = "../primus_utils" }

num-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
nightly = []
simd = ["rand/simd_support"]

[[bench]]
name = "ops"
harness = false
