[package]
name = "primus_lattice"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_utils = { path = "../primus_utils" }
primus_integer = { path = "../primus_integer" }
primus_reduce = { path = "../primus_reduce" }
primus_modulo = { path = "../primus_modulo" }
primus_distr = { path = "../primus_distr" }
primus_poly = { path = "../primus_poly" }

serde = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }
