[package]
name = "primus_modulus"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_gcd = { path = "../primus_gcd" }
primus_integer = { path = "../primus_integer" }
primus_reduce = { path = "../primus_reduce" }
primus_factor = { path = "../primus_factor" }
primus_barrett_derive = { path = "../primus_barrett_derive", optional = true }

num-traits = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "modulus"
harness = false

[[bench]]
name = "barrett_slice"
harness = false

[features]
default = ["derive"]
nightly = ["primus_integer/nightly"]
simd = ["primus_integer/simd"]
derive = ["dep:primus_barrett_derive"]
