[package]
name = "primus_ntt"
version = "0.1.0"
edition = "2024"

[dependencies]
integer = { path = "../integer" }
reduce = { path = "../reduce" }
modulo = { path = "../modulo" }
uint_modulus = { path = "../uint_modulus" }
primus_factor = { path = "../primus_factor" }


thiserror = { workspace = true }
rand = { workspace = true }
