[package]
name = "primus_ntt"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_integer = { path = "../primus_integer" }
reduce = { path = "../reduce" }
modulo = { path = "../modulo" }
uint_modulus = { path = "../uint_modulus" }
primus_factor = { path = "../primus_factor" }
primus_poly = { path = "../primus_poly" }

thiserror = { workspace = true }
rand = { workspace = true }
concrete-ntt = { git = "https://github.com/primus-labs/concrete-ntt", branch = "dev", default-features = false, optional = true }

[features]
default = ["concrete-ntt"]
concrete-ntt = ["dep:concrete-ntt", "concrete-ntt/std"]
nightly = ["concrete-ntt?/nightly"]
