[package]
name = "primus_ntt"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_integer = { path = "../primus_integer" }
primus_reduce = { path = "../primus_reduce" }
primus_modulo = { path = "../primus_modulo" }
primus_modulus = { path = "../primus_modulus" }
primus_factor = { path = "../primus_factor" }
primus_poly = { path = "../primus_poly" }

thiserror = { workspace = true }
rand = { workspace = true }
concrete-ntt = { git = "https://github.com/primus-labs/concrete-ntt", branch = "dev", default-features = false, optional = true }
aligned-vec = "0.6.4"

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["concrete-ntt"]
concrete-ntt = ["dep:concrete-ntt", "concrete-ntt/std"]
nightly = ["concrete-ntt?/nightly"]

[[bench]]
name = "ntt"
harness = false