[package]
name = "primus_poly"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_utils = { path = "../primus_utils" }
primus_integer = { path = "../primus_integer" }
primus_reduce = { path = "../primus_reduce" }
primus_modulo = { path = "../primus_modulo" }
primus_uint_modulus = { path = "../primus_uint_modulus" }
primus_factor = { path = "../primus_factor" }

serde = { workspace = true }
num-traits = { workspace = true }
