[package]
name = "primus_poly"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_integer = { path = "../primus_integer" }
primus_reduce = { path = "../primus_reduce" }
primus_modulo = { path = "../primus_modulo" }
primus_modulus = { path = "../primus_modulus" }
primus_factor = { path = "../primus_factor" }
primus_distr = { path = "../primus_distr" }

serde = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
paste = { workspace = true }
