[package]
name = "primus_rns"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_gcd = { path = "../primus_gcd" }
primus_integer = { path = "../primus_integer" }
reduce = { path = "../reduce" }
modulo = { path = "../modulo" }
primus_factor = { path = "../primus_factor" }

thiserror = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
barrett = { path = "../barrett" }
