[package]
name = "primus_rns"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_gcd = { path = "../primus_gcd" }
primus_utils = { path = "../primus_utils" }
primus_integer = { path = "../primus_integer" }
primus_reduce = { path = "../primus_reduce" }
primus_modulo = { path = "../primus_modulo" }
primus_factor = { path = "../primus_factor" }
primus_poly = { path = "../primus_poly" }

thiserror = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
primus_modulus = { path = "../primus_modulus" }
